--- a/Inheritance.html
+++ b/Inheritance.html
@@ -5,18 +5,78 @@
 body {
   font-family: Georgia, serif;
 }
+.center {
+  text-align: center;
+  margin-top: 5%;
+  font-size: 140%;
+}
+.generatorTable {
+  margin-top: 15%;
+  margin-left: auto;
+  margin-right: auto;
+  width: 100%;
+  text-align: center;
+}
+td{
+  height: 35px;
+}
 </style>
 </head>
 <body>
-<h1>Hello World</h1>
-<p>You have: <span class="btn" id="btn">10</span> Stuff</p>
-<div>Generator 1: <span class="gen1" id="gen1">0</span><button type="button" class="gen1Cost" id="gen1Cost" onclick="buyGen1()">10</button></span>
+<div class="center"><p>You have: <span class="btn" id="btn">10</span> Stuff</p></div>
+<table class="generatorTable">
+<tr><td>Generator 1:</td><td class="gen1" id="gen1">0 (0)</td><td><button type="button" class="gen1Cost" id="gen1Cost" onclick="buyGen1()">10</button></td></tr>
+<tr><td>Generator 2: <td class="gen2" id="gen2">0</td><td><button type="button" class="gen2Cost" id="gen2Cost" onclick="buyGen2()">1000</button></td></tr>
+<tr><td>Generator 3: <td class="gen3" id="gen3">0</td><td><button type="button" class="gen3Cost" id="gen3Cost" onclick="buyGen3()">100000</button></td></tr>
+<tr><td>Generator 4: <td class="gen4" id="gen4">0</td><td><button type="button" class="gen4Cost" id="gen4Cost" onclick="buyGen4()">10000000</button></td></tr>
+<tr><td>Generator 5: <td class="gen5" id="gen5">0</td><td><button type="button" class="gen5Cost" id="gen5Cost" onclick="buyGen5()">1000000000</button></td></tr>
+<tr><td>Generator 6: <td class="gen6" id="gen6">0</td><td><button type="button" class="gen6Cost" id="gen6Cost" onclick="buyGen6()">100000000000</button></td></tr>
+<tr><td>Generator 7: <td class="gen7" id="gen7">0</td><td><button type="button" class="gen7Cost" id="gen7Cost" onclick="buyGen7()">10000000000000</button></td></tr>
+<tr><td>Generator 8: <td class="gen8" id="gen8">0</td><td><button type="button" class="gen8Cost" id="gen8Cost" onclick="buyGen8()">1000000000000000</button></td></tr>
+<tr><td>Generator 9: <td class="gen9" id="gen9">0</td><td><button type="button" class="gen9Cost" id="gen9Cost" onclick="buyGen9()">100000000000000000</button></td></tr>
+</table>
 <script>
 var counter = 10;
 var gain = 0;
 var gen1 = 0;
+var gen1Pd = 0;
+var gen1Tot = 0;
+var gen2 = 0;
+var gen2Pd = 0;
+var gen2Tot = 0;
+var gen3 = 0;
+var gen3Pd = 0;
+var gen3Tot = 0;
+var gen4 = 0;
+var gen4Pd = 0;
+var gen4Tot = 0;
+var gen5 = 0;
+var gen5Pd = 0;
+var gen5Tot = 0;
+var gen6 = 0;
+var gen6Pd = 0;
+var gen6Tot = 0;
+var gen7 = 0;
+var gen7Pd = 0;
+var gen7Tot = 0;
+var gen8 = 0;
+var gen8Pd = 0;
+var gen8Tot = 0;
+var gen9 = 0;
+var gen9Pd = 0;
+var gen9Tot = 0;
+
 var gen1Cost = 10;
+var gen2Cost = 1000;
+var gen3Cost = 100000;
+var gen4Cost = 100000000;
+var gen5Cost = 10000000000;
+var gen6Cost = 1000000000000;
+var gen7Cost = 100000000000000;
+var gen8Cost = 10000000000000000;
+var gen9Cost = 1000000000000000000;
 function incrementer(){
+  calculateGain();
   counter+=gain;
   document.getElementById("btn").innerHTML = counter.toString();
 }
@@ -25,16 +85,113 @@ function buyGen1(){
   if(counter>=gen1Cost){
   counter-=gen1Cost;
   gen1+=1;
-  document.getElementById("gen1").innerHTML = gen1.toString();
+  calculateGain();
+  calculateCost();}
+}
+function buyGen2(){
+  if(counter>=gen2Cost){
+  counter-=gen2Cost;
+  gen2+=1;
+  calculateGain();
+  calculateCost();}
+}
+function buyGen3(){
+  if(counter>=gen3Cost){
+  counter-=gen3Cost;
+  gen3+=1;
+  calculateGain();
+  calculateCost();}
+}
+function buyGen4(){
+  if(counter>=gen4Cost){
+  counter-=gen4Cost;
+  gen4+=1;
+  calculateGain();
+  calculateCost();}
+}
+function buyGen5(){
+  if(counter>=gen5Cost){
+  counter-=gen5Cost;
+  gen5+=1;
+  calculateGain();
+  calculateCost();}
+}
+function buyGen6(){
+  if(counter>=gen6Cost){
+  counter-=gen6Cost;
+  gen6+=1;
+  calculateGain();
+  calculateCost();}
+}
+function buyGen7(){
+  if(counter>=gen7Cost){
+  counter-=gen7Cost;
+  gen7+=1;
+  calculateGain();
+  calculateCost();}
+}
+function buyGen8(){
+  if(counter>=gen8Cost){
+  counter-=gen8Cost;
+  gen8+=1;
+  calculateGain();
+  calculateCost();}
+}
+function buyGen9(){
+  if(counter>=gen9Cost){
+  counter-=gen9Cost;
+  gen9+=1;
   calculateGain();
   calculateCost();}
 }
 function calculateGain(){
-  gain=Math.pow(2,gen1);
+  gen9Tot=(gen9+gen9Pd);
+  document.getElementById("gen9").innerHTML = gen9Tot.toString() + " (" + gen9.toString() + ")";
+  gen8Pd+=(gen9Tot * Math.pow(2,gen9-1));
+  gen8Tot=(gen8+gen8Pd);
+  document.getElementById("gen8").innerHTML = gen8Tot.toString() + " (" + gen8.toString() + ")";
+  gen7Pd+=(gen8Tot * Math.pow(2,gen8-1));
+  gen7Tot=(gen7+gen7Pd);
+  document.getElementById("gen7").innerHTML = gen7Tot.toString() + " (" + gen7.toString() + ")";
+  gen6Pd+=(gen7Tot * Math.pow(2,gen7-1));
+  gen6Tot=(gen6+gen6Pd);
+  document.getElementById("gen6").innerHTML = gen6Tot.toString() + " (" + gen6.toString() + ")";
+  gen5Pd+=(gen6Tot * Math.pow(2,gen6-1));
+  gen5Tot=(gen5+gen5Pd);
+  document.getElementById("gen5").innerHTML = gen5Tot.toString() + " (" + gen5.toString() + ")";
+  gen4Pd+=(gen5Tot * Math.pow(2,gen5-1));
+  gen4Tot=(gen4+gen4Pd);
+  document.getElementById("gen4").innerHTML = gen4Tot.toString() + " (" + gen4.toString() + ")";
+  gen3Pd+=(gen4Tot * Math.pow(2,gen4-1));
+  gen3Tot=(gen3+gen3Pd);
+  document.getElementById("gen3").innerHTML = gen3Tot.toString() + " (" + gen3.toString() + ")";
+  gen2Pd+=(gen3Tot * Math.pow(2,gen3-1));
+  gen2Tot=(gen2+gen2Pd);
+  document.getElementById("gen2").innerHTML = gen2Tot.toString() + " (" + gen2.toString() + ")";
+  gen1Pd+=(gen2Tot * Math.pow(2,gen2-1));
+  gen1Tot=(gen1+gen1Pd);
+  document.getElementById("gen1").innerHTML = gen1Tot.toString() + " (" + gen1.toString() + ")";
+  gain=(gen1Tot * Math.pow(2,gen1-1));
 }
 function calculateCost(){
-  gen1Cost=2*gen1;
+  gen1Cost=10*Math.pow(10,gen1);
+  gen2Cost=1000*Math.pow(25,gen2);
+  gen3Cost=100000*Math.pow(100,gen3);
+  gen4Cost=10000000*Math.pow(250,gen4);
+  gen5Cost=1000000000*Math.pow(1000,gen5);
+  gen6Cost=100000000000*Math.pow(2500,gen6);
+  gen7Cost=10000000000000*Math.pow(10000,gen7);
+  gen8Cost=1000000000000000*Math.pow(25000,gen8);
+  gen9Cost=100000000000000000*Math.pow(100000,gen9);
   document.getElementById("gen1Cost").innerHTML = gen1Cost.toString(); 
+  document.getElementById("gen2Cost").innerHTML = gen2Cost.toString(); 
+  document.getElementById("gen3Cost").innerHTML = gen3Cost.toString(); 
+  document.getElementById("gen4Cost").innerHTML = gen4Cost.toString();
+  document.getElementById("gen5Cost").innerHTML = gen5Cost.toString(); 
+  document.getElementById("gen6Cost").innerHTML = gen6Cost.toString();
+  document.getElementById("gen7Cost").innerHTML = gen7Cost.toString(); 
+  document.getElementById("gen8Cost").innerHTML = gen8Cost.toString();
+  document.getElementById("gen9Cost").innerHTML = gen9Cost.toString(); 
 }
 </script>
 </body>
